# whatsapp-uic-generator

./: .env.example  .gitignore  FRENCH_DOCS_README.md  LICENSE  QUICKSTART.md  README.md  README_FR.md  README_FR_HEADER.tmp  README_FR_WINDOWS.md  REQUIREMENTS.md  SETUP.md  TWILIO_SANDBOX_SETUP.md  convert-to-pdf.sh  pyproject.toml  start.sh
FR/: FRENCH_DOCS_README.md  README_FR.md  README_FR_WINDOWS_ADDENDUM.md
app/: config.py  database.py  logging_config.py  main.py
app/api/: webhook.py
app/models/: __init__.py  uic.py
app/services/: __init__.py  flow_manager.py  qr_service.py  uic_service.py
docs/: CHANGES_SUMMARY.md  CUSTOMIZING_QUESTIONS.md  DOCUMENTATION_UPDATE_SUMMARY.md  PDF_CONVERSION_GUIDE.md  QR_CODE_FEATURE.md  README_UPDATE_SUMMARY.md  SETUP.md
scripts/: convert-to-pdf-weasyprint.sh  convert-to-pdf.sh  generate_salt.py  init_db.py  run_dev.sh
static/qr_codes/: .gitkeep
styles/: pandoc-pdf-style.css
tests/: test_qr_service.py  test_uic_service.py
